--- a/bundles/dovecot/files/dovecot.conf
+++ b/bundles/dovecot/files/dovecot.conf
@@ -105,7 +105,6 @@ service stats {
 }
 service managesieve-login {
   #inet_listener sieve {}
-  process_min_avail = 0
   process_min_avail = 1
   process_limit = 1
   vsz_limit = 64 M
@@ -162,20 +161,39 @@ service decode2text {
     }
 }
 
-## # spam filter
-## sieve_plugins = sieve_imapsieve sieve_extprograms
-## sieve_dir = /var/vmail/sieve/%u/
-## sieve = /var/vmail/sieve/%u.sieve
-## sieve_pipe_bin_dir = /var/vmail/sieve/bin
-## sieve_extensions = +vnd.dovecot.pipe
+mailbox Junk {
+  sieve_script learn_spam {
+    driver = file
+    type   = before
+    cause  = copy
+    path   = /var/vmail/sieve/global/learn-spam.sieve
+  }
+}
 
-## # From elsewhere to Spam folder
-## imapsieve_mailbox1_name = Junk
-## imapsieve_mailbox1_causes = COPY
-## imapsieve_mailbox1_before = file:/var/vmail/sieve/global/learn-spam.sieve
+imapsieve_from Junk {
+  sieve_script learn_ham {
+    driver = file
+    type   = before
+    cause  = copy
+    path   = /var/vmail/sieve/global/learn-ham.sieve
+  }
+}
 
-## # From Spam folder to elsewhere
-## imapsieve_mailbox2_name = *
-## imapsieve_mailbox2_from = Junk
-## imapsieve_mailbox2_causes = COPY
-## imapsieve_mailbox2_before = file:/var/vmail/sieve/global/learn-ham.sieve
+# Extprograms-Plugin einschalten
+sieve_plugins {
+  sieve_extprograms = yes
+}
+
+# Welche Sieve-Erweiterungen dürfen genutzt werden?
+# Empfehlung: nur global erlauben (nicht in User-Skripten):
+sieve_global_extensions {
+  vnd.dovecot.pipe = yes
+  # vnd.dovecot.filter = yes      # nur falls gebraucht
+  # vnd.dovecot.execute = yes     # nur falls gebraucht
+}
+
+# Verzeichnis mit deinen Skripten/Binaries für :pipe
+sieve_pipe_bin_dir = /var/vmail/sieve/bin
+# (optional, analog für :filter / :execute)
+# sieve_filter_bin_dir  = /var/vmail/sieve/filter
+# sieve_execute_bin_dir = /var/vmail/sieve/execute
