--- a/bundles/dovecot/files/dovecot.conf
+++ b/bundles/dovecot/files/dovecot.conf
@@ -139,6 +139,12 @@ sieve_script after {
 }
 
 # fulltext search
+language en {
+}
+language de {
+  default = yes
+}
+
 fts flatcurve {
   # substring_search = yes     # RFC-konform = yes, braucht aber deutlich mehr Platz
   # rotate_count     = 5000   # DB-Rotation nach X Mails
