--- a/bundles/dovecot/files/dovecot.conf
+++ b/bundles/dovecot/files/dovecot.conf
@@ -144,6 +144,7 @@ language en {
 language de {
   default = yes
 }
+language_tokenizers =  generic email-address
 
 fts flatcurve {
   # substring_search = yes     # RFC-konform = yes, braucht aber deutlich mehr Platz
@@ -152,6 +153,7 @@ fts flatcurve {
   # optimize_limit   = 10
   # min_term_size    = 3
 }
+
 fts_autoindex = yes
 fts_decoder_driver = script
 fts_decoder_script_socket_path = decode2text
