--- a/bundles/dovecot/files/dovecot.conf
+++ b/bundles/dovecot/files/dovecot.conf
@@ -114,12 +114,12 @@ service managesieve {
 }
 
 protocol imap {
-  mail_plugins = $mail_plugins imap_sieve
+  mail_plugins = fts fts_flatcurve imap_sieve
   mail_max_userip_connections = 50
   imap_idle_notify_interval = 29 mins
 }
 protocol lmtp {
-  mail_plugins = $mail_plugins sieve
+  mail_plugins = fts fts_flatcurve sieve
 }
 
 # Persönliches Skript (deine alte Datei /var/vmail/sieve/%u.sieve)
