--- a/bundles/dovecot/files/dovecot.conf
+++ b/bundles/dovecot/files/dovecot.conf
@@ -3,7 +3,6 @@ dovecot_storage_version = ${storage_version}
 
 protocols = imap lmtp sieve
 auth_mechanisms = plain login
-mail_privileged_group = mail
 ssl = required
 ssl_server_cert_file = /var/lib/dehydrated/certs/${hostname}/fullchain.pem
 ssl_server_key_file = /var/lib/dehydrated/certs/${hostname}/privkey.pem
@@ -147,7 +146,7 @@ language de {
 language_tokenizers =  generic email-address
 
 fts flatcurve {
-  # substring_search = yes     # RFC-konform = yes, braucht aber deutlich mehr Platz
+  substring_search = yes
   # rotate_count     = 5000   # DB-Rotation nach X Mails
   # rotate_time      = 5s     # oder zeitbasiert rotieren
   # optimize_limit   = 10
@@ -159,7 +158,8 @@ fts_decoder_driver = script
 fts_decoder_script_socket_path = decode2text
 
 service indexer-worker {
-    vsz_limit = ${indexer_ram}
+  process_limit = ${indexer_cores}
+  vsz_limit = ${indexer_ram}M
 }
 service decode2text {
     executable = script /usr/local/libexec/dovecot/decode2text.sh
