l4d move some config around

--- a/bundles/left4dead2/files/server.cfg
+++ b/bundles/left4dead2/files/server.cfg
@@ -2,6 +2,7 @@
 hostname ${server_name}
 motd_enabled 0
 rcon_password ${rcon_password}
+sv_steamgroup "38347879"
 
 // server specific
 % for line in config:
