l4d someoptions here and there

--- a/bundles/left4dead2/files/server.cfg
+++ b/bundles/left4dead2/files/server.cfg
@@ -4,6 +4,9 @@ motd_enabled 0
 rcon_password ${rcon_password}
 sv_steamgroup "38347879"
 
+mp_autoteambalance 0
+sv_forcepreload 1
+
 // server specific
 % for line in config:
 ${line}
